# resume-to-portfolio

./: README.md  agents.md
backend/: make_pdf.py  pyproject.toml  pytest_out.txt  pytest_out2.txt
backend/app/: gemini.py  main.py  parser.py
backend/tests/: test_api.py  test_gemini.py  test_parser.py
frontend/: package-lock.json  package.json  vitest_out.txt  vitest_out2.txt
frontend/src/: App.jsx  index.css
frontend/src/components/: Portfolio.jsx  Portfolio.test.jsx  UploadForm.jsx  UploadForm.test.jsx
